sandbox/output
StingCalculatorTest.java:17: error: cannot find symbol
        AssertEquals(result, 3);
        ^
  symbol:   method AssertEquals(int,int)
  location: class StingCalculatorTest
1 error
